--- a/router/router.yaml
+++ b/router/router.yaml
@@ -54,3 +54,11 @@ limits:
   max_depth: 5
   max_height: 10
   max_aliases: 3
+
+preview_persisted_queries:
+  enabled: true
+  safelist:
+    enabled: true
+    require_id: false
+apq:
+  enabled: false
